Fix story board height to rm scrollbar

--- a/app/assets/stylesheets/_screen.scss
+++ b/app/assets/stylesheets/_screen.scss
@@ -54,7 +54,7 @@ div.column_content {
   padding-bottom: 80px;
   border-right: 1px solid $black;
   border-left: 1px solid $black;
-  max-height: calc(100vh - 133px)
+  max-height: calc(100vh - 145px);
 }
 
 /* Story columns headers */
