--- a/app/assets/stylesheets/_simple-sidebar.scss
+++ b/app/assets/stylesheets/_simple-sidebar.scss
@@ -131,6 +131,7 @@
 .toggle-inputs{
   position: absolute;
   bottom: 0;
+  opacity: 0.01
 }
 
 .sidebar-link{
